# ChangeLog for app-shells/bash
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.177 2008/05/17 09:02:36 dberkholz Exp $

  17 May 2008; Donnie Berkholz <dberkholz@gentoo.org>; bash-3.2_p39.ebuild:
  (222211) Install examples with USE=examples. Approved by vapier.

  06 May 2008; Mike Frysinger <vapier@gentoo.org>
  +files/autoconf-mktime-2.59.patch, bash-3.2_p39.ebuild:
  Add patch for mktime issue #220040.

  06 May 2008; Jeroen Roovers <jer@gentoo.org> bash-3.2_p33.ebuild:
  Stable for HPPA (bug #220091).

  06 May 2008; Christian Faulhammer <opfer@gentoo.org> bash-3.2_p33.ebuild:
  stable x86, bug 220091

  06 May 2008; Raúl Porcel <armin76@gentoo.org> bash-3.2_p33.ebuild:
  alpha/ia64/sparc stable wrt #220091

  05 May 2008; Markus Meier <maekke@gentoo.org> bash-3.2_p33.ebuild:
  amd64 stable, bug #220091

  05 May 2008; Brent Baude <ranger@gentoo.org> bash-3.2_p33.ebuild:
  stable ppc64, bug 220091

  04 May 2008; nixnut <nixnut@gentoo.org> bash-3.2_p33.ebuild:
  Stable on ppc wrt bug 220091

*bash-3.2_p39 (03 May 2008)

  03 May 2008; Mike Frysinger <vapier@gentoo.org> +bash-3.2_p39.ebuild:
  Version bump.

  01 Mar 2008; Fabian Groffen <grobian@gentoo.org> files/bashrc:
  Add support for Interix's terminal, bug #211875 by Markus Duft

  01 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +files/bash-3.2-ldflags-for-build.patch, bash-3.2_p33.ebuild:
  Fix from Takashi YOSHII to respect LDFLAGS_FOR_BUILD #211947.

  02 Jan 2008; Stephen Bennett <spb@gentoo.org> bash-3.2_p25.ebuild,
  bash-3.2_p33.ebuild:
  Block paludis versions that don't work with new bash releases

*bash-3.2_p33 (02 Jan 2008)

  02 Jan 2008; Mike Frysinger <vapier@gentoo.org> +bash-3.2_p33.ebuild:
  Version bump.

  02 Jan 2008; Jeroen Roovers <jer@gentoo.org> bash-3.2_p17-r1.ebuild:
  Stable for HPPA (bug #203603).

  29 Dec 2007; Raúl Porcel <armin76@gentoo.org> bash-3.2_p17-r1.ebuild: